# Polycode

./: .travis.yml  readme.md
Bindings/Contents/PY/: test.py
Bindings/Contents/PY/API/Polycode/: EventDispatcher.py
Bindings/Scripts/create_lua_library/: create_lua_library.py
Bindings/Scripts/create_python_library/: CMakeLists.txt  CppHeaderParser.py  CppHeaderParser3.py  Makefile  create_py_library.py
Bindings/Scripts/create_python_library2/: .gitignore  PyAutoC.cpp  exclude.core  ls.core
Bindings/Scripts/create_python_library2/PyAutoC/: PolyBezierCurve.cpp  PolyBone.cpp  PolyCamera.cpp  PolyColor.cpp  PolyConfig.cpp  PolyCore.cpp  PolyCoreInput.cpp  PolyCoreServices.cpp  PolyCubemap.cpp  PolyData.cpp  PolyEntity.cpp  PolyEvent.cpp  PolyEventDispatcher.cpp  PolyFixedShader.cpp  PolyFont.cpp  PolyFontManager.cpp  PolyGLCubemap.cpp  PolyGlobals.cpp  PolyImage.cpp  PolyInputEvent.cpp  PolyLabel.cpp  PolyMaterial.cpp  PolyMaterialManager.cpp  PolyMatrix4.cpp  PolyMesh.cpp  PolyModule.cpp  PolyObject.cpp  PolyParticleEmitter.cpp  PolyPerlin.cpp  PolyQuaternion.cpp  PolyQuaternionCurve.cpp  PolyRectangle.cpp  PolyRenderDataArray.cpp  PolyRenderer.cpp  PolyResource.cpp  PolyResourceManager.cpp  PolyScene.cpp  PolySceneEntityInstance.cpp  PolySceneImage.cpp  PolySceneLabel.cpp  (+21 more)
Documentation/Py/scripts/: CMakeLists.txt  site_header.html
Documentation/Py/xml/: Polycode.xml
